# metafactor

./: CMakeLists.txt  LICENSE  README  bench.sh  bench_primes.sh  bench_vc.sh  cexpr.h  metafactor.cpp  metafactor.h  metafactor.kdev4  metafactor11.h  metafactorcommon.h  metaprimes.cpp  metaprimes.h  metaprimes11.h  metaprimescommon.h  sint.h  variadic_typelist.h
